--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -306,12 +306,21 @@ float: right;
 
 
 
+#divPerfilArtistas
+{
+    margin-top: 2%;
+}
 
-
-
-
-
-
+#divPerfiEve .module {
+background: #ffffff none repeat scroll 0 0 padding-box;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
+    box-sizing: border-box;
+    float: right;
+    margin: 3px 5px 25px;
+    padding: 10px;
+    width: 70%;
+}
 
 
 
@@ -377,17 +386,16 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
 }
   /* evento*/
 
-
-#divPerfilEvento .module {
-    background: #ffffff none repeat scroll 0 0 padding-box;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
-    box-sizing: border-box;
-    float: right;
-    margin-top: -1.3%;
-    padding: 10px;
-    width: 70%;
+#divPerfilEvento
+{
+    margin-top: 2%;
 }
+
+ /*  #divPerfilEvento{
+    margin: 0 auto;
+    overflow: hidden;
+    width: 80%;
+   }*/
 
 #map_canvas
 {
@@ -397,27 +405,30 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
   margin-top:23%;
     }
     
-/*    #divIzquierdaE
-    {
-        width: 40%;
-        margin-top:10%;
-    }*/
-    
-   #divPerfilEvento{
-    margin: 0 auto;
-    overflow: hidden;
-    width: 80%;
-   }
+
    
-    #divPerfilEvento .moduleE {
-    background: #ffffff none repeat scroll 0 0 padding-box;
+    #divPerfilEvento .moduleE
+     {
+ background: #ffffff none repeat scroll 0 0 padding-box;
     border-radius: 5px;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.4);
     box-sizing: border-box;
     float: right;
-    margin : -31% 0% 0% 0%;
     padding: 10px;
-    width: 67%;
+    width: 70%;
+}
+
+
+
+#divIzquierdaE .col-md-4
+{
+    margin-top: 5px;
+    width: 29%;
+}
+
+
+#divIzquierdaE .col-md-5
+{    width: 40%;
 }
 
 #divPerfilEvento .moduleE .title {
@@ -425,7 +436,7 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
     color: #fff !important;
-    margin: -10px -10px 10px;
+    margin: -24px -10px 10px;
     padding: 10px;
 }
 
@@ -441,13 +452,5 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
     margin-top: 0;
 }
 
-#divIzquierda .col-md-3
-{
-    margin-top: 5px;
-    width: 29%;
-}
 
-#divIzquierda  .col-md-a
-{
-    width:37%;
-}
+
