--- a/CuandoTocan/CuandoTocan/Home.Master
+++ b/CuandoTocan/CuandoTocan/Home.Master
@@ -5,7 +5,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
-    <head runat="server">
+    <head id="Head1" runat="server">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <link rel="icon" type="image/png" href="img/favicon.png"/>
         <meta name="description" content="Sitio para seguir y conocer eventos de bandas"/>
@@ -54,7 +54,8 @@
   </head>   
       
     <body> 
-        <div id="divHome">
+
+         <div id="divHome">
             <form id="formMaster" runat="server" role="form" class="form-horizontal">
                 <div id="divHomeMaster">
                     
@@ -75,7 +76,7 @@
                             </div>
                         </div>
 
-                        <div id="divLogin">
+                        <div id="divLogin" runat="server">
                             <ul>
                                 <li>
                                     <button ID="Button1" type="button" class="btn btn-link" data-toggle="modal" data-target="#myModal">Login</button>
@@ -99,7 +100,7 @@
                                                            <asp:RequiredFieldValidator ID="txtPassVal" ControlToValidate="txtPass" runat="server" ErrorMessage="Campo Obligatorio" ValidationGroup="login"></asp:RequiredFieldValidator>
                                                             <br/>
                                                            <%-- <button ID="Button3" type="button" class="btn btn-link" data-toggle="modal" data-target="#Div1">¿Todavía no tenés cuenta? Registrate.</button>--%>
-                                                            <a href="#Div1" data-toggle="modal"  data-dismiss="myModal">Register now</a>
+                                                            <a href="/pages/registro.aspx" data-toggle="modal" class="btn btn-link"  data-dismiss="myModal">¿Todavía no tenés cuenta? Registrate.</a>
                                                         
                                                         </div>
                                                         <div class="modal-footer">
@@ -110,157 +111,7 @@
                                                 </div>
                                             </div>
                                             
-                                            <!--Modal registracion-->
-                                            <div class="modal fade" id="Div1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                                                <div  id="mdAnA">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <button ID="Button4" type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                                <span aria-hidden="true">&times;</span>
-                                                            </button>
-                                                            <h4 class="modal-title" id="H1">Crear cuenta</h4>
-                                                        </div>
-                                                        <div class="modal-body">
-                                                            <div class="row">
-                                                                 <div class="col-sm-2">
-                                                                   <label for="imputUser">Usuario</label>
-                                                                 </div>
-                                                                 <div class="col-sm-4">
-                                                                   <asp:TextBox ID="regUser" runat="server" placeholder="JuanPerez90" class="form-control"></asp:TextBox>
-                                                                    <asp:RequiredFieldValidator ID="regUserVal" ControlToValidate="regUser" runat="server" ErrorMessage="Campo Obligatorio" ValidationGroup="registro"></asp:RequiredFieldValidator>
-                                                                 </div>
-                                                                 <div class="col-sm-2">
-                                                                    <label for="imputUser">E-Mail</label>
-                                                                 </div>
-                                                                  <div class="col-sm-4">
-                                                                    <asp:TextBox ID="regMail" runat="server" placeholder="JuanPerez90@gmail.com" class="form-control"></asp:TextBox>
-                                                                    <asp:RequiredFieldValidator ID="regMailVal" ControlToValidate="regMail" runat="server" ErrorMessage="Campo Obligatorio" ValidationGroup="registro"></asp:RequiredFieldValidator>
-                                                                     <asp:RegularExpressionValidator ID="validateEmail" runat="server" ErrorMessage="Email invalido" ControlToValidate="regMail" ValidationExpression="\w+([-+.']\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*"  ValidationGroup="registro" />
-                                                                 </div>
-                                                             </div>
-                                                             <div class="row">
-                                                                <div class="col-sm-2">
-                                                                    <label for="inputPassword">Password</label>
-                                                                </div>
-                                                                <div class="col-sm-4">
-                                                                    <asp:TextBox ID="regPassword" type="password" runat="server" placeholder="Password123" class="form-control"></asp:TextBox>
-                                                                    <asp:RequiredFieldValidator ID="regPasswordVal" ControlToValidate="regPassword" runat="server" ErrorMessage="Campo Obligatorio"  ValidationGroup="registro"></asp:RequiredFieldValidator>
-                                                                </div>
-                                                                <div class="col-sm-2">
-                                                                    <label for="inputRePassword">Re-Password</label>
-                                                                </div>
-                                                                   <div class="col-sm-4">
-                                                                      <asp:TextBox ID="regRePassword" type="password" runat="server" placeholder="Password123" class="form-control"></asp:TextBox>
-                                                                       <asp:CompareValidator ID="regRePasswordVal" ControlToValidate="regRePassword" ControlToCompare="regPassword" runat="server" ErrorMessage="Los password no coinciden"  ValidationGroup="registro"></asp:CompareValidator>
-                                                                   </div>
-                                                             </div>
-                                                              <div class="row">
-                                                                <div class="col-sm-2">
-                                                                   <label for="ddlTiUsua">Tipo de Usuario</label>
-                                                                </div>
-                                                                <div class="col-sm-4">
-                                                                   <asp:DropDownList ID="ddlTiUsua" runat="server" class="form-control">   
-                                                                        <asp:ListItem Enabled="true" Text="Elija Tipo de usuario" Value="-1"></asp:ListItem>
-                                                                        <asp:ListItem Text="Usuario" Value="1"></asp:ListItem>
-                                                                        <asp:ListItem Text="Artista" Value="2"></asp:ListItem> 
-                                                                    </asp:DropDownList>
-                                                                </div>
-                                                                <div class="col-sm-2">
-                                                                    <label for="inputNombre">Nombre Completo</label>
-                                                                </div>
-                                                                   <div class="col-sm-4">
-                                                                      <asp:TextBox ID="regNombre" type="text" runat="server" placeholder="Juan Perez" class="form-control"></asp:TextBox>
-                                                                     <asp:RequiredFieldValidator ID="regNombreVal" ControlToValidate="regNombre" runat="server" ErrorMessage="Campo Obligatorio"  ValidationGroup="registro"></asp:RequiredFieldValidator>
-                                                                   </div>
-                                                             </div>
-                                                             <div class="row">
-                                                                <div class="col-sm-2">
-                                                                    <label for="inputDireccion">Direccion:</label>
-                                                                </div>
-                                                                <div class="col-sm-4">
-                                                                  <asp:TextBox ID="regDireccion" type="text" runat="server" placeholder="Av. Rivadavia 1234" class="form-control"></asp:TextBox>  
-                                                                  <asp:RequiredFieldValidator ID="regDireccionVal" ControlToValidate="regDireccion" runat="server" ErrorMessage="Campo Obligatorio" ValidationGroup="registro"></asp:RequiredFieldValidator>
-                                                                </div>
-                                                                <div class="col-sm-2">
-                                                                    <label for="calendarFNac">Fecha de nacimiento:</label>
-                                                                </div>
-                                                                   <div class="col-sm-4">
-                                                                      <asp:TextBox ID="regFNac" type="text" runat="server" placeholder="dd-mm-aaaa" class="form-control"/>
-                                                                      <asp:RequiredFieldValidator ID="regFNacVal" ControlToValidate="regFNac" runat="server" ErrorMessage="Campo Obligatorio" ValidationGroup="registro" class="control-group error"></asp:RequiredFieldValidator>
-                                                                   </div>
-                                                             </div>
-                                                             <div class="row">
-                                                                 <div class="col-sm-2">
-                                                                   <label for="TextAreaBio">Acerca de vos:</label>
-                                                                 </div>
-                                                                  <div class="col-sm-10">
-                                                                    <asp:TextBox id="TextAreaBio" TextMode="multiline" Columns="150" Rows="3" runat="server"  placeholder="Me gusta..." class="form-control" />
-                                                                  </div>
-                                                            </div>
-
-                                                         
-                                           <%--   comento formulario en solo una columna
-                                                         <div class="form-group">
-                                                            <label for="imputUser" class="col-sm-2 control-label">Usuario</label>
-                                                                <div class="col-sm-10">
-                                                                 <asp:TextBox ID="imputUser" runat="server" placeholder="JuanPerez90" class="form-control"></asp:TextBox>
-                                                                </div>
-                                                             </div>
-                                                          <div class="form-group">
-                                                            <label for="inputPassword" class="col-sm-2 control-label">Password</label>
-                                                                <div class="col-sm-10">
-                                                                   <asp:TextBox ID="inputPassword" type="password" runat="server" placeholder="Password123" class="form-control"></asp:TextBox>
-                                                                </div>
-                                                            </div>
-                                                             <div class="form-group">
-                                                                <label for="inputRePassword" class="col-sm-2 control-label">Re-Password</label>
-                                                                <div class="col-sm-10">
-                                                                   <asp:TextBox ID="inputRePassword" type="password" runat="server" placeholder="Password123" class="form-control"></asp:TextBox>
-                                                                </div>
-                                                            </div>
-                                                            <div class="form-group">
-                                                            <label for="ddlTiUsua" class="col-sm-2 control-label">Tipo de Usuario</label>
-                                                                <div class="col-sm-10">
-                                                                   <asp:DropDownList ID="ddlTiUsua" runat="server" class="form-control">   
-                                                                        <asp:ListItem Enabled="true" Text="Elija Tipo de usuario" Value="-1"></asp:ListItem>
-                                                                        <asp:ListItem Text="Usuario" Value="1"></asp:ListItem>
-                                                                        <asp:ListItem Text="Artista" Value="2"></asp:ListItem> 
-                                                                    </asp:DropDownList>
-                                                                </div>
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <label for="inputNombre" class="col-sm-2 control-label">Nombre Completo</label>
-                                                                    <div class="col-sm-10">
-                                                                       <asp:TextBox ID="inputNombre" type="text" runat="server" placeholder="Juan Perez" class="form-control"></asp:TextBox>
-                                                                    </div>
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <label for="inputDireccion" class="col-sm-2 control-label">Direccion:</label>
-                                                                    <div class="col-sm-10">
-                                                                       <asp:TextBox ID="inputDireccion" type="text" runat="server" placeholder="Av. Rivadavia 1234" class="form-control"></asp:TextBox>
-                                                                    </div>
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <label for="calendarFNac" class="col-sm-2 control-label">Fecha de nacimiento:</label>
-                                                                <div class="col-sm-10">
-                                                                    <asp:TextBox ID="InputFNac" type="text" runat="server" placeholder="dd-mm-aaaa" class="form-control"/>
-                                                                </div>
-                                                            </div>
-                                                            <div class="form-group">
-                                                                <label for="TextAreaBio" class="col-sm-2 control-label">Acerca de vos:</label>
-                                                                <div class="col-sm-10">
-                                                                     <asp:TextBox id="TextAreaBio" TextMode="multiline" Columns="50" Rows="5" runat="server"  placeholder="Me gusta..." class="form-control" />
-                                                                </div>
-                                                            </div>--%>
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <%--<button type="button" class="btn btn-default" class="close" aria-label="Close">Crear</button>--%>
-                                                           <asp:Button ID="Button6" runat="server" Text="Registrar" onclick="Button6_Click" />
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </ContentTemplate>
+                                       </ContentTemplate>
                                     </asp:UpdatePanel>
                                 </li>
                             </ul>
