--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -452,6 +452,18 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
     margin-top: 0;
 }
 
+#divPerfilEvento .modal-body {
+    color: #000;
+    font-size: 16px;
+    margin-bottom: 10px;
+    margin-top: 0;
+}
+
+#divPerfilEvento .modal-body span
+{
+      color: #22b573;
+       font-size: 18px;
+}
 /* ============Registracion ======*/
 #divPerfilRegistracion  
 {   
@@ -487,4 +499,10 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
     margin-bottom: 10px;
     margin-top: 0;
     text-align:right;
+}
+
+
+#myModalE
+{
+    color:#000;
 }
