--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -464,6 +464,12 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
       color: #22b573;
        font-size: 18px;
 }
+
+
+.modal-body  .col-sm-10
+{margin-left: 11%;
+}
+
 /* ============Registracion ======*/
 #divPerfilRegistracion  
 {   
