--- a/CuandoTocan/CuandoTocan/Home.Master
+++ b/CuandoTocan/CuandoTocan/Home.Master
@@ -69,7 +69,8 @@
                             <div class="row">
                               <div class="col-lg-6">
                                 <div class="input-group">
-                                  <input type="text" class="form-control" placeholder="Ingrese busqueda..."/>
+                                  <%--<input type="txBusq" class="form-control" placeholder="Ingrese busqueda..."/>--%>
+                                    <asp:TextBox ID="txtBusq" class="form-control" placeholder="Ingrese busqueda..." runat="server"></asp:TextBox>
                            <span class="input-group-btn">
                             <asp:DropDownList ID="ddlTiBusqueda" runat="server" class="form-control"  >   
                              <asp:ListItem Enabled="true" Text="Tipo..." Value="0"></asp:ListItem>
@@ -79,7 +80,9 @@
                          </asp:DropDownList>
                           </span>
                                   <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button">Buscar!</button>
+                                      <asp:Button ID="btnBusq" class="btn btn-default" runat="server" 
+                                        Text="Buscar!" onclick="btnBusq_Click" />
+                                   <%-- <button class="btn btn-default" type="button">Buscar!</button>--%>
                                   </span>
                                 </div>
                               </div>
@@ -139,6 +142,7 @@
 
             </form>
         </div>
+
     </body>
               
 </html>
