--- a/CuandoTocan/CuandoTocan/Home.Master
+++ b/CuandoTocan/CuandoTocan/Home.Master
@@ -48,6 +48,15 @@
 
           <script type="text/javascript">
 
+
+              function test(user) {
+
+                  document.getElementById('<%=divLogin.ClientID %>').style.display = 'none';
+                  
+                  document.getElementById('logged').innerHTML = 'Bienvenido, ' + user;
+
+                  }
+
               function openModal() {
                   $('#myModal').modal({ show: true });
               }
@@ -91,15 +100,16 @@
                               </div>
                             </div>
                         </div>
-
+                       
                         <div id="divLogin" runat="server">
                             <ul>
                                 <li>
+                                    
                                     <button ID="Button1" type="button" class="btn btn-link" data-toggle="modal" data-target="#myModal">Login</button>
-                               <%--     <asp:ScriptManager ID="ScriptManager1" runat="server"/>
-                                    <asp:UpdatePanel ID="UpdatePanel1" runat="server">
-                                        <ContentTemplate>
-                                       --%>    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                           <asp:ScriptManager ID="ScriptManager1" runat="server"/>
+                                  <%--  <asp:UpdatePanel ID="UpdatePanel1" runat="server">
+                                        <ContentTemplate>--%>
+                                         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                                                 <div class="modal-dialog">
                                                     <div class="modal-content">
                                                         <div class="modal-header">
@@ -135,7 +145,17 @@
                                 </li>
                             </ul>
                         </div>
+                        <div id="afterlogged" > 
+                         <asp:Label ID="logged" runat="server" Text=""></asp:Label>
+                         </div>
                     </div>   
+                    <script type="text/javascript">
+
+                                function HideLoginOption(user, mail) {
+                            alert("etst");
+                        }
+
+                        </script>
 
                     <div id="divCuerpo">
                         <asp:ContentPlaceHolder ID="ContentHomeCenterMed" runat="server"/>
