--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -75,7 +75,10 @@ float: left;
     
     
 }
-
+#logged
+{
+    color:#ffffff;
+}
 #divLogin 
 {
 float: left;
@@ -83,7 +86,13 @@ float: left;
     margin-top: 3%;
     overflow: hidden;
 }
-   
+#afterlogged
+   {
+float: left;
+    margin-left: 1%;
+    margin-top: 3%;
+    overflow: hidden;
+}
 #divLogin ul
 {
     cursor: pointer;
