Registro de evento
Graba asistencia a evento en la base y dispara mails

--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -529,3 +529,9 @@ input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
 {
     color:#000;
 }
+
+
+#myModalE > .modal-dialog
+{
+ width: 34%;
+}
