--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -1,9 +1,6 @@
 ﻿body
 {
     background-image: url("../img/fondo.png");
-  /*  background-image: url("../img/fondo2.png");
-    background-image: url("../img/fondo3.png");
-    background-image: url("../img/fondo4.png");*/
 }
 
 #divHome
@@ -25,26 +22,17 @@
 #divCabecera
 {
 background-color: #333333;
-overflow: hidden;
-width: 100%;
+    height: 103px;
+    overflow: hidden;
+    width: 100%;
 }
 
 #divLogo
 {
 float: left;
- /*   margin-bottom: -28px;
     margin-left: 10%;
-    margin-top: -22px;
-overlfow:hidden;
-    z-index:1;
-    position: absolute;*/
-    
-      float: left;
-    margin-bottom: -28px;
-    margin-left: 10%;
-    margin-top: -0.4%;
-    position: absolute;
-    z-index: 1;
+    margin-top: -2.8%;
+    overflow: hidden;
     
 }
 
@@ -58,34 +46,26 @@ height: 60%;
 
 #divBuscador
 {
-float: left;
-    /*ana margin-left: 56%;
-    overflow: hidden;
-   
-    width: 25%;
-    padding-bottom: 2%;
-    margin-top: 3%; 
-   ana*/
     float: left;
-    margin-left: 50%;
-    margin-top: 3%;
+    margin-left: 18%;
+    margin-top: 3.5%;
     overflow: hidden;
-    padding-bottom: 2%;
-    width: 25%;
-    
-    
+    width: 35%;
 }
+
 #logged
 {
     color:#ffffff;
 }
+
 #divLogin 
 {
-float: left;
+    float: left;
     margin-left: 1%;
-    margin-top: 3%;
+    margin-top: 3.5%;
     overflow: hidden;
 }
+
 #afterlogged
    {
 float: left;
@@ -187,8 +167,7 @@ border-bottom: 0 none;
 {
 margin: 0 auto;
     overflow: hidden;
-    width: 80%;
-    /*background-color: red;*/
+    width: 90%;
 }
 
 #divCuerpoTopIzq
@@ -201,7 +180,7 @@ float: left;
 {
   float: right;
     margin-bottom: 1%;
-    margin-right: 9.5%;
+    margin-right: 12%;
     margin-top: 2%;
 }
 
@@ -225,58 +204,45 @@ font-size: 19px;
 
 #divGallery
 {
-float: left;
+    float: left;
     overflow: hidden;
     width: 70%;
 }
 
-#divGallery .col-lg-3 {
-    width: 247px;
+#divGallery .divImagen {
+    float: left;
+    margin: 5px;
 }
 
-#divGallery .thumbnail {
-  background-color: #fff;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    display: block;
-    margin-bottom: 5px;
-    margin-right: 5px;
-    padding: 3px;
-    transition: all 0.2s ease-in-out 0s;
+#divGallery .imgA {
+  
 }
 
-#divGallery img {
-    display: block;
-    height: 176px;
-    max-width: 100%;
-    width: 231px;
-}
-
-#divGallery .col-xs-1, #divGallery .col-lg-3 #divGallery .col-md-4 #divGallery .col-xs-6
-{
-    min-height: 1px;
-    padding-left: 0;
-    padding-right: 0;
-    position: relative;
+#divGallery .imgGallery {
+    border-radius: 10px;
+    height: 150px;
+    width: 200px;
 }
 
 
 
 
 
-#divDescatados
+
+
+#ContentHomeCenterMed_divDescatados
 {
 float: right;
     margin-top: 1px;
     overflow: hidden;
-    width: 25%;
+    width: 30%;
 }
 
-#divDescatados .row {
+#ContentHomeCenterMed_divDescatados .row {
     margin: 0;
 }
 
-#divDescatados .col-md-7 {
+#ContentHomeCenterMed_divDescatados .col-md-7 {
     float: left;
     height: 65px;
     margin: 0;
@@ -284,21 +250,22 @@ float: right;
     width: 80px;
 }
 
-#divDescatados .col-md-5 {
+#ContentHomeCenterMed_divDescatados .col-md-5 {
     float: left;
     margin: 22px 0 0;
     padding-left: 15px;
     padding-right: 0;
-    width: 180px;
+    width: 68%;
 }
 
-#divDescatados .col-md-7 img
+#ContentHomeCenterMed_divDescatados .col-md-7 img
 {
     height: 65px;
     width: 80px;
+    border-radius: 10px;
 }
 
-#divDescatados hr 
+#ContentHomeCenterMed_divDescatados hr 
 {
     -moz-border-bottom-colors: none;
     -moz-border-left-colors: none;
@@ -312,7 +279,7 @@ float: right;
     margin-top: 5px;
 }
 
-#divDescatados .col-md-5 .h4 
+#ContentHomeCenterMed_divDescatados .col-md-5 .h4 
 {
     font-size: 17px;
     color: inherit;
