--- a/CuandoTocan/CuandoTocan/css/Home.css
+++ b/CuandoTocan/CuandoTocan/css/Home.css
@@ -217,8 +217,10 @@ font-size: 19px;
 }
 
 #divGallery .imgA {
-  
+    height: 150px;
+    width: 200px;
 }
+
 
 #divGallery .imgGallery {
     border-radius: 10px;
@@ -228,6 +230,61 @@ font-size: 19px;
 
 
 
+#ContentHomeCenterMed_proximos .divImagen img
+{
+   height: 160px;
+    width: 254px;  
+     border-radius: 10px;
+}
+
+#ContentHomeCenterMed_proximos #text
+{
+    z-index:100;
+    position: absolute; 
+    color:white;
+    
+    font-size: 19px;
+    font-weight: normal;
+    left: 150px;
+    margin: 20% 0 0 -5.2%;
+
+    top:350px;
+}
+
+.divImagen .text
+
+{color:white;
+ font-weight:bold;
+  margin: -4.8% 0 0 0.3%;
+ position: absolute;
+ background: rgba(0, 0, 0, 0.75);
+ }
+
+#ContentHomeCenterMed_proximos
+{
+     margin: 0% 0 1% 0;
+    float:left;
+    clear:left;
+    overflow: hidden;
+    width: 70%;
+    
+    
+}
+
+/*#ContentHomeCenterMed_proximos #divImagen
+{
+    display:inline-table;
+}*/
+
+#ContentHomeCenterMed_proximos1
+
+{
+    height: 15%;
+    width: 30%;
+    margin: 4px;
+    float:left;
+
+}
 
 
 
